[Fix] Increase mask container z-index so that it covers also modals.

--- a/src/component/misc/Mask.scss
+++ b/src/component/misc/Mask.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   background: rgba(245, 245, 245, 0.6);
-  z-index: 101;
+  z-index: 1051;
 }
 
 /* This mask covers a container instead of the whole viewport */
